Fixed important bug and made the navbar look better on mobile

--- a/css/common.css
+++ b/css/common.css
@@ -82,6 +82,16 @@ a, a:hover {
     background: #000000;
     border: none;
   }
+  .navbar li {
+    border: none;
+    text-align: left;
+  }
+  .navbar .img img {
+    height: 40px;
+  }
+  .navbar-nav.navbar-left {
+    margin-bottom: -5px;
+  }
 }
 
 @media (min-width: 768px) {
