--- a/css/levels.css
+++ b/css/levels.css
@@ -13,6 +13,7 @@
 
 .level {
   padding: 30px;
+  height: 123px;
   border: 3px solid #d4d0d0;
   border-radius: 15px;
   font-family: Helvetica;
